Fixed the issue, of overlapping the upload button when uploading images. (and videos)

--- a/web/css/viewBuzzSuccess.css
+++ b/web/css/viewBuzzSuccess.css
@@ -840,3 +840,7 @@ input[type="button"]{
 .postContent{
     word-wrap: break-word;
 }
+
+#postSubmitBtn, #imageUploadBtn, .btnSaveVideo{
+    margin-top: 0;
+}
